js262/test/language/expressions/object/method-definition/early-errors-object-method-arguments-in-formal-parameters.js


/*---
author: Brian Terlson <brian.terlson@microsoft.com>
esid: pending
description: It is a SyntaxError if FormalParameters contains arguments
negative:
  phase: parse
  type: SyntaxError
flags: [onlyStrict]
features: [async-functions]
---*/

$DONOTEVALUATE();
({
  async foo (arguments) { }
})
